Fix unwanted row gap in the stories grid

--- a/components/StoryCards/StoryCard.module.scss
+++ b/components/StoryCards/StoryCard.module.scss
@@ -66,7 +66,7 @@
     @include tablet-up {
         display: grid;
         grid-template-columns: 25% auto;
-        gap: $spacing-4;
+        gap: 0 $spacing-4;
 
         .imageWrapper,
         .imageContainer {
