--- a/modules/Stories/StoriesList.module.scss
+++ b/modules/Stories/StoriesList.module.scss
@@ -13,7 +13,7 @@
     @include desktop-up {
         display: grid;
         grid-template-columns: repeat(6, 1fr);
-        gap: $spacing-6;
+        gap: 0 $spacing-6;
     }
 }
 
